samples/_failures_safe/1761187904_a15534_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e126906.c: In function ‘main’:
./samples/SAFE/__tmp_2e126906.c:161:9: error: expected declaration or statement at end of input
  161 |         printf("Invalid starting vertex\n");
      |         ^~~~~~
./samples/SAFE/__tmp_2e126906.c:161:9: error: expected declaration or statement at end of input
